# research-sample-model

./: .gitignore  README.md  pyproject.toml  setup.cfg
checkpoints/: marl_policy.pt  ssl_encoder.pt
configs/: control_policy.yaml  env.yaml  inference.yaml  model.yaml  new_my_city.yaml  train_marl.yaml  train_ssl.yaml
data/: ssl_rollouts.parquet
data/sample_net_2/: map.poly.xml  map.rou.xml  map.sumo.cfg  trips.trips.xml
data/sample_nets/: grid.edg.xml  grid.net.xml  grid.nod.xml  grid.rou.xml  grid.sumocfg
docker/: Dockerfile  docker-compose.yml
gnn_signal_optimizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gso/: __init__.py
gso/graph/: builder.py  normalization.py  schema.py
gso/model/: hgat.py  mc_dropout.py  policy.py
gso/runtime/: inference_engine.py  recorder.py
gso/serve/: api.py  broadcaster.py  schemas.py
gso/sim/: control_translator.py  kpis.py  state_extractor.py  traci_client.py
gso/training/: checkpoints.py  marl_env.py  marl_trainer.py  replay.py  ssl_dataset.py  ssl_trainer.py
gso/utils/: fileio.py  logging.py  seed.py  timers.py
outputs/2025-10-16/15-46-34/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2025-10-16/16-27-19/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-16/16-41-02/.hydra/: hydra.yaml
outputs/2025-10-16/16-41-33/.hydra/: hydra.yaml
outputs/2025-10-16/16-42-05/.hydra/: hydra.yaml
outputs/2025-10-16/16-42-21/.hydra/: hydra.yaml
outputs/2025-10-16/16-42-36/.hydra/: hydra.yaml
outputs/2025-10-16/16-55-35/.hydra/: hydra.yaml  overrides.yaml
outputs/2025-10-16/16-57-25/.hydra/: hydra.yaml
outputs/2025-10-16/16-59-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-16/17-00-37/.hydra/: hydra.yaml
recordings/: rollouts.parquet
scripts/: export_onnx.py  pretrain_ssl.py  run_sumo_inference.py  start_server.py  train_marl.py
tests/: test_api.py  test_control_translator.py  test_graph_builder.py  test_mc_dropout.py  test_model_forward.py
(+36 files in other folders)
